<resources>
    <string name="app_name">Doha</string>
    <!--    메인화면 BottomNavigation    -->
    <string name="bottomNavigation_first">일정</string>
    <string name="bottomNavigation_second">가계부</string>
    <string name="bottomNavigation_third">메모</string>
    <string name="bottomNavigation_force">습관</string>
    <string name="bottomNavigation_fifth">일기</string>
    <!--    메인화면 DrawerLayout   -->
    <string name="navigation_drawer_open">열기</string>
    <string name="navigation_drawer_close">닫기</string>
</resources>