<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_navigation_schedule"
        android:icon="@drawable/schedule_icon"
        android:title="@string/bottomNavigation_first"/>
    <item
        android:id="@+id/bottom_navigation_account_book"
        android:icon="@drawable/account_book_icon"
        android:title="@string/bottomNavigation_second"/>
    <item
        android:id="@+id/bottom_navigation_note"
        android:icon="@drawable/note_icon"
        android:title="@string/bottomNavigation_third"/>
    <item
        android:id="@+id/bottom_navigation_diary"
        android:icon="@drawable/diary_icon"
        android:title="@string/bottomNavigation_fifth"/>
    <item
        android:id="@+id/bottom_navigation_practice"
        android:icon="@drawable/practice_icon"
        android:title="@string/bottomNavigation_force"/>


</menu>